--- a/src/components/regulation.scss
+++ b/src/components/regulation.scss
@@ -58,4 +58,15 @@
       right: -8rem;
     }
   }
+
+  @media (max-width: 768px) {
+    .regulation {
+      &::after {
+        right: 0;
+      }
+      &::before {
+        right: 0;
+      }
+    }
+  }
 }
